[package]
name = "polymarket-us"
version = "0.1.0"
edition = "2021"
authors = ["Michael Bordash <michaelbordash@gmail.com>"]
description = "Unofficial Rust SDK for the Polymarket US Retail API"
license = "MIT"
repository = "https://github.com/mbordash/polymarket-us"
homepage = "https://github.com/mbordash/polymarket-us"
readme = "README.md"
keywords = ["polymarket", "sdk", "trading", "api"]
categories = ["api-bindings", "finance"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = "2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

